Stencil Paint Overlay Broken #70260

Closed
opened 2019-09-26 03:52:31 +02:00 by gabe2252 · 9 comments

System Information
Operating system: Linux-5.0.0-29-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.33.0, 5.0.0-29-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.0-devel

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 13:57, hash: f8da7218be
Worked:
blender 2.80 release

Short description of error
The texture overlay when painting with stencil paint is missing.

2.80:
2.80Works.png
2.81:
2.81Broked.png

Exact steps for others to reproduce the error
blend file:
stencilPaintTest.blend
Open attached blend file in 2.81. You should see that the stencil doesn't work in 2.81. It does work in 2.80.

**System Information** Operating system: Linux-5.0.0-29-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.33.0, 5.0.0-29-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.0-devel **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 13:57, hash: `f8da7218be` Worked: blender 2.80 release **Short description of error** The texture overlay when painting with stencil paint is missing. 2.80: ![2.80Works.png](https://archive.blender.org/developer/F7775412/2.80Works.png) 2.81: ![2.81Broked.png](https://archive.blender.org/developer/F7775414/2.81Broked.png) **Exact steps for others to reproduce the error** blend file: [stencilPaintTest.blend](https://archive.blender.org/developer/F7775416/stencilPaintTest.blend) Open attached blend file in 2.81. You should see that the stencil doesn't work in 2.81. It does work in 2.80.
Author

Added subscriber: @gabe2252

Added subscriber: @gabe2252

Added subscriber: @cschumann

Added subscriber: @cschumann

Also broken on Windows latest build. Texture is there but not showing.

Also broken on Windows latest build. Texture is there but not showing.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Philipp Oeser self-assigned this 2019-09-26 13:20:47 +02:00
Member

That is caused by 078fcc6253, will see what went wrong there...

That is caused by 078fcc6253, will see what went wrong there...

This issue was referenced by f547c396e1

This issue was referenced by f547c396e19625699bf1b938484feb61b3798517
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thank you for the quick fix! :)

Thank you for the quick fix! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70260
No description provided.