Fix T70260: Stencil Paint Overlay Broken

own error in rB078fcc62534c (doing the overlay only in 3d painting)